Fixed text bleed

--- a/src/components/Chatbot/Chatbot.css
+++ b/src/components/Chatbot/Chatbot.css
@@ -1,6 +1,7 @@
 /* Chatbot.css - Mobile Responsive Enhanced and Seamless Search Bar */
 body {
     overflow: hidden;
+    height: screen;
 }
 
 #title{
@@ -116,7 +117,6 @@ body {
 }
 .search-box textarea:focus-within {
     background-color: transparent;
-    border-color: transparent;
 }
 
 .search-box img {
@@ -127,6 +127,7 @@ body {
 
 
 .search-box textarea::placeholder {
+    border-color: transparent;
     color: rgba(255, 255, 255, 0.7);
 }
 
@@ -161,11 +162,13 @@ body {
 .icon-container button:hover {
     background-color: #b9367e;
 }
-
+.result div{
+    height: max-content;
+}
 .result {
     padding: 0 max(3%, 0.5rem);
     overflow-y: scroll;
-    height: calc(100% - 130px);
+    height: calc(100% );
 }
 
 .result::-webkit-scrollbar {
@@ -358,6 +361,7 @@ span{
     }
 
     .search-box textarea::placeholder {
+        border-color: transparent;
         color: rgba(255, 255, 255, 0.5); /* Placeholder text to dark grey for mobile search box */
     }
 
@@ -420,7 +424,7 @@ span{
     text-align: right;
     margin-right: 10px;
     margin-left: auto;
-    max-width: 80%;
+    max-width: fit-content;
     background: -webkit-linear-gradient(16deg, #ff3392, #ce747a, #ff305d);
     color: white;
     padding: 10px 15px;
@@ -440,7 +444,7 @@ span{
     text-align: left;
     margin-left: 10px;
     margin-right: auto;
-    max-width: 80%;
+    max-width: fit-content;
     background-color: transparent;
     padding: 10px 15px;
     border-radius: 0 20px 20px 20px;
@@ -459,7 +463,7 @@ span{
     text-align: right;
     margin-right: 10px;
     margin-left: auto;
-    max-width: 80%;
+    max-width: fit-content;
     background: -webkit-linear-gradient(16deg, #ff3392, #ce747a, #ff305d);
     color: white;
     padding: 10px 15px;
